--- a/package.json
+++ b/package.json
@@ -13,11 +13,15 @@
   "dependencies": {
     "@hapi/hapi": "^20.1.3",
     "@hapi/inert": "^6.0.3",
+    "@types/react-redux": "^7.1.16",
     "classnames": "^2.3.1",
     "handlebars": "^4.7.7",
     "hookrouter": "1.2.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.2.4",
+    "redux": "^4.1.0",
+    "redux-thunk": "^2.3.0",
     "url": "^0.11.0"
   },
   "devDependencies": {
